Git Master
------------------------------------------------------------------------------------------------------------------------

ENGINE:
	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin

Tickets:
    - Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
    - Fixed #834: Cosmetics - Ticket system menu names

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc3
------------------------------------------------------------------------------------------------------------------------

2013-07-23: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc3

CONFIGS:
	- Removed Amavis, ClamAV and SpamAssassin configuration (Such service must be provided as plugin)

ENGINE:
	- Added config_readonly option in bootstrap
	- Added cron job for deactivation of entities belonging to an expired account
	- Fixed: Allow to get raw db connection
	- Fixed: unable to remove htgroup
	- Fixed: TERM environment variable not set (IMSCP::Debug library)
	- Removed 'dnschange' status
	- Updated 'change' status to 'tochange' and 'delete' status to 'todelete'

GUI:
	- Added plugin archive upload feature (tar.gz, tar.bz2 and zip)
	- Updated plugin API (Several BC breaks expected)
	- Removed 'dnschange' status
	- Updated status: 'change' to 'tochange' and 'delete' to 'todelete'
	- Added protected Web folders option to hosting plans

SETUP:
	- Items with status other than 'ok' and similar are not longer rebuilded on update

TOOLS:
	- Fixed: Awstats - Forbidden access (Ubuntu Lucid)

Tickets:
	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...
	- Fixed #786: Bug - Httpd Server impl. - apache_php_fpm. - No input file specified
	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication
	- Fixed #793: Bug - Autoinstaller/Setup - Admin user is getting new id in database
	- Fixed #808: Enhancement - Possibility to Upload i-MSCP Plugins via GUI